--- a/style.css
+++ b/style.css
@@ -34,8 +34,9 @@ body {
 }
 
 .table-container {
-  padding: 20px;
+  padding-top: 0px !important;
   overflow-x: auto; /* 테이블 좌우 스크롤 가능 */
+  overflow-y: hidden;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -45,7 +46,7 @@ body {
 table {
   border-collapse: collapse;
   width: 100%;
-  height: 90%;
+  height: 100%;
   display: flex;
   table-layout: fixed;
   flex-direction: row;
@@ -101,7 +102,7 @@ td {
   word-wrap: break-word;
   text-align: center;
   margin-bottom: 10px;
-  padding: 5px;
+
   overflow-y: auto;
 }
 
@@ -122,13 +123,27 @@ td {
   font-weight: bolder;
 }
 
+/* 팝업 기본 스타일 */
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
 /* 전체 팝업 */
 .popup-content {
   padding: 20px;
   width: 90%;
   /* max-width: 1000px; */
   position: relative;
-  height: 90%; /* 화면의 90% 높이 */
+  height: 95%; /* 화면의 90% 높이 */
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -228,20 +243,6 @@ td {
   word-wrap: break-word;
   padding: 10px;
   text-align: left;
-}
-
-/* 팝업 기본 스타일 */
-.popup {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 1000;
 }
 
 /* 팝업 닫기 버튼 스타일 */
