modified:   script.js 	modified:   style.css

--- a/style.css
+++ b/style.css
@@ -142,6 +142,15 @@ td {
   justify-content: center;
   align-items: center;
   z-index: 1000;
+
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.popup.show {
+  opacity: 1;
+  visibility: visible;
 }
 
 /* 전체 팝업 */
