--- a/style.css
+++ b/style.css
@@ -153,14 +153,14 @@ td {
   align-items: center;
   z-index: 1000;
 
-  opacity: 0;
+  /* opacity: 0;
   visibility: hidden;
-  transition: opacity 0.5s ease-in-out;
+  transition: opacity 0.5s ease-in-out; */
 }
 
 .popup.show {
-  opacity: 1;
-  visibility: visible;
+  /* opacity: 1;
+  visibility: visible; */
 }
 
 /* 전체 팝업 */
