--- a/style.css
+++ b/style.css
@@ -153,14 +153,10 @@ td {
   align-items: center;
   z-index: 1000;
 
-  /* opacity: 0;
-  visibility: hidden;
-  transition: opacity 0.5s ease-in-out; */
-}
-
-.popup.show {
-  /* opacity: 1;
-  visibility: visible; */
+  /* 팝업의 초기 스타일 설정 */
+  opacity: 0;
+  transform: scale(0.9);
+  transition: opacity 0.3s ease, transform 0.3s ease;
 }
 
 /* 전체 팝업 */
