--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ td {
 .image {
   align-self: flex-end;
   justify-items: center;
+  filter: blur(10px);
 }
 
 .image img {
@@ -120,7 +121,7 @@ td {
   word-wrap: break-word;
   text-align: center;
   margin-bottom: 30px;
-
+  filter: blur(8px);
   overflow-y: auto;
 }
 
